css/style.css
/* ... */
a:hover.goback {
	background: #DDD url('../images/icon_back.png') no-repeat center left;
	color: #000000;
	text-decoration: none;
}

a.report {
	background: url('../images/icon_report.png') no-repeat center left;
	padding: 5px 5px 5px 19px;
	margin-left: 15px;
	color: #737373;
}

a:hover.report {
	color: #565656;
	text-decoration: none;
}

a.submit_coupon {
	background: url('../images/icon_submit_coupon.png') no-repeat center left;
	padding: 5px 5px 5px 19px;
	margin-left: 10px;
	color: #737373;
}

a:hover.submit_coupon {
	color: #565656;
	text-decoration: none;
}

a.more {
	color: #A0A0A0;
	background: url('../images/icon_more.png') no-repeat center left;
	padding: 4px 5px 5px 13px;
	text-decoration: none;
}

a:hover.more {
	color: #000000;
	text-decoration: none;
}

a.go2store {
	font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
	color: #FFFFFF;
	font-size: 15px;
	font-weight: 700;
	white-space: nowrap;
	padding: 5px 18px 5px 10px;
    display: block;
	border: 1px solid #770000;
	background: #770000 url('../images/goto.png') no-repeat center right 4px;
    cursor: pointer;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
	text-decoration: none;
	margin: 5px 0;
}

a:hover.go2store {
	color: #FFFFFF;
	background: #70078F url('../images/goto.png') no-repeat center right 3px;
	border: 1px solid #70078F;
	text-decoration: none;
}

a.go2store_b {
	background: url('../images/arrow.png') no-repeat right 1px;
	padding: 0px 18px 8px 0;
	font-size: 13px;
	color: #3494CF;
	font-weight: bold;
	white-space: nowrap;
	text-decoration: underline;
}

a:hover.go2store_b {
	color: #191919;
	text-decoration: none;
}

a.go2store_large {
	font-family: 'Open Sans Condensed', Times, "Lucida Grande", "Lucida Sans Unicode", Arial, Verdana, sans-serif;
	color: #FFFFFF;
	font-size: 22px;
	font-weight: bold;
	white-space: nowrap;
	padding: 11px 25px 11px 20px;
	margin: 10px 0;
	border: 1px solid #770000;
	background: #70078F url('../images/goto.png') no-repeat center right 7px;
    border: none;
    cursor: pointer;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    text-shadow: 1px 1px #999999;
	-webkit-box-shadow: 0 0 3px #91C42D;
	box-shadow: 0 0 3px #91C42D;
	text-decoration: none;
}

a:hover.go2store_large {
	color: #FFFFFF;
	background: #0bb586 url('../images/goto.png') no-repeat center right 3px;
	border: 1px solid #0bb586;
	text-decoration: none;
}

:focus {
    outline: 0;
}


/* Autocomplete
----------------------------------------------- */
.searchhere {
	width: 310px;
	max-height: 400px;
	overflow-y: auto;
	background: #FFFFFF;
	box-shadow: 1px 1px 5px #CCCCCC;
	z-index: 10000;
	top: 77px;
	display: none;
	position: absolute;
	font-size: 13px;
	font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
	border: 1px solid #D8D8D8;
	padding: 5px;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
}

.ac_results {
	padding: 0;
	margin: 0;
	text-align: left;
}

.xlist { min-height:27px; padding: 5px 2px; color: #777777; border-bottom: 1px dotted #EEEEEE; }
.xlist:hover { background: #F7F7F7; color: #99DD11; cursor: pointer; }
.xlist .ac_image { float:left; margin-right:5px; width:55px; text-align:center; overflow:hidden; }
.xlist .ac_result { float:left; width:160px; padding-top: 5px; vertical-align: middle; overflow:hidden; }
.xlist img { height:25px; border: 1px solid #F5F5F5; }
.xlist .ac_cashback { color: #770000; }
.xlist .ac_website { font-size: 13px; color: #BFBFBF; }




/* Statuses
----------------------------------------------- */

.confirmed_status, .pending_status, .declined_status, .failed_status, .request_status, .paid_status, .payment_status {
	float: left;
	margin-left: 3px;
	padding: 5px 5px 5px 20px;
}

.confirmed_status {
	color: #84ad09;
	background: url('../images/icons/status-confirmed.png') no-repeat center left;
}

.pending_status {
	color: #F7B400;
	background: url('../images/icons/status-pending.png') no-repeat center left;
}

.declined_status {
	color: #FF5558;
	background: url('../images/icons/status-declined.png') no-repeat center left;
}

.failed_status {
	color: #FF000A;
	background: url('../images/icons/status-failed.png') no-repeat center left;
}

.request_status {
	color: #F79731;
	background: url('../images/icons/status-request.png') no-repeat center left;
}

.paid_status {
	color: #86C125;
	background: url('../images/icons/status-paid.png') no-repeat center left;
}

.payment_status {
	color: #535352;
}

.active_s {
	color: #26CD34;
	background: url('../images/icons/status-active.png') no-repeat center left;
	padding: 5px 0 5px 18px;
}

.inactive_s
{
	color: #B5B5B5;
	background: url('../images/icons/status-inactive.png') no-repeat center left;
	padding: 5px 0 5px 18px;
}


/* Message Box
----------------------------------------------- */
.info_msg, .success_msg, .error_msg, .login_msg {
	background-repeat: no-repeat;
	background-position: 8px center;
	font-weight: bold;
	width: 91%;
	margin: 7px auto;
	padding: 7px 7px 7px 7px;
}

.info_msg {
	color: #ADADAD;
	background-color: #F4F4F4;
	border: 1px solid #F2F2F2;
	background-image: url('../images/icon_info.png');
}

.error_msg {
	color: #E94E4E;
	background-color: #FBE1D8;
	border: 1px solid #FFD4C6;
	background-image: url('../images/icon_error.png');
}

.success_msg {
	color: #FFFFFF;
	background-color: #90EA2A;
	border: 1px solid #76D806;
	background-image: url('../images/icon_success.png');
}

.login_msg {
	width: 100%;
	text-align: center;
	color: #FFFFFF;
	background-color: #70078F;
	padding: 10px;
	font-weight: bold;
}

.login_msg a {
	color: #FFFFFF;
	text-decoration: underline;
}

.login_msg a:hover {
	color: #FFFFFF;
	text-decoration: none;
}


/* Lists
----------------------------------------------- */
ul {
	padding: 0;
	margin: 10px 0 5px 30px;
}

li {
	padding: 2px 0 0 0;
}

#categories {
	padding: 0;
	margin: 0 5px 5px 10px;
}
/* ... */

